2008-01-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/randomize.c: added previews for hurl,
	pick, and slur.
	
2008-01-02  Michael Natterer  <mitch@gimp.org>

	* app/core/Makefile.am
	* app/core/gimpdrawable-operation.[ch]: new files containing
	gimp_drawable_apply_operation() which applies a gegl operation
	to a drawable's selected pixels using shadow tiles. Will soon
	be used in more places than just invert.

	* app/core/gimpdrawable-invert.c: use it here, makes
	gimp_drawable_invert() a 3-liner.

2008-01-01  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangletool.c (gimp_rectangle_tool_start): Use ×
	instead of x when initializing the rectangle size in the status
	bar.

2007-12-30  Sven Neumann  <sven@gimp.org>

	* app/gegl/gimp-gegl-utils.[ch]: added new function
	gimp_bpp_to_babl_format_linear().

	* app/gegl/gimpoperationtilesink.[ch]
	* app/gegl/gimpoperationtilesource.[ch]: added boolean property to
	toggle between linear and gamma-corrected data.

	* app/core/gimpdrawable-invert.c: assume linear data to be closer
	to the original definition of the invert operation in GIMP.
	Enable the GEGL code path per default.

2007-12-30  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdrawable-invert.c (gimp_drawable_invert): moved
	processing in the GEGL code path back to the main loop.

2007-12-30  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpcolorbalancetool.c
	* app/tools/gimpcolorizetool.c
	* app/tools/gimpcurvestool.c
	* app/tools/gimphuesaturationtool.c
	* app/tools/gimplevelstool.c
	* app/tools/gimpposterizetool.c
	* app/tools/gimpthresholdtool.c: #include <gegl.h>. Fixes the build.

2007-12-30  Michael Natterer  <mitch@gimp.org>

	First actual image processing with GEGL! Wheeeee :-)

	* app/core/gimpimagemap.[ch]: added code to use gegl instead of the
	old apply_func and apply_data.

	(gimp_image_map_new): add GeglNode parameter that, if passed,
	switches the whole thing to using a gegl graph with this node